--- a/CoordinatorLayoutEx/app/src/main/res/layout/activity_main.xml
+++ b/CoordinatorLayoutEx/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+    <include layout="@layout/tab_layout"/>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
